--- a/ch02/questionnaire-web/Cargo.toml
+++ b/ch02/questionnaire-web/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "questionnaire-web"
+name = "questionnaire-cli"
 version = "0.1.0"
-rust-version = "1.64"
 edition = "2021"
-
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.21.*", features = ["full"] }
+tokio = { version = "1.23.*", features = ["full"] }
 warp = { version = "0.3.*" }
