Finished section 4.2: methods PUT and DELETE for questions.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,4 +3,6 @@ tab_spaces = 2
 fn_args_layout = "Vertical"
 force_multiline_blocks = true
 max_width = 90
+reorder_imports = true
 group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
