--- a/ch07/questionnaire-web-01-sql-scripts/handle-errors/Cargo.toml
+++ b/ch07/questionnaire-web-01-sql-scripts/handle-errors/Cargo.toml
@@ -13,3 +13,4 @@ doc = true
 [dependencies]
 warp = { version = "0.3.*" }
 sqlx = { version = "0.6.*" }
+tracing = { version = "0.1.*", features = ["log"] }
